--- a/gionee/htm/men/css/men.css
+++ b/gionee/htm/men/css/men.css
@@ -8,3 +8,4 @@ body{max-width:640px; margin:0 auto; position:relative; background:#ff3962;}
 #content .pImg{ margin:1em auto; width:40%;}
 #content .pTitle{ margin:0.8em 0 0.8em -0.45em;}
 strong{ font-weight:bold;}
+.big{ font-size:1.2em;}
