--- a/gionee/htm/dwj/css/dwj.css
+++ b/gionee/htm/dwj/css/dwj.css
@@ -126,7 +126,7 @@ body{max-width:640px; width:100%; margin:0 auto; position:relative; background:#
 #loading{width:100%; height:100%; background:#333;position:fixed; left:0; top:0; z-index:20; color:#ff5f3a;}
 .loadingText{ color:#999; font-size:.7em; position:fixed; top:50%; width:100%; text-align:center;}
 .spinner{ width: 20px; height: 20px; left:50%;  top:45%; margin:-10px 0 0 -10px;; position:fixed; z-index:100;}
-.container1 > div, .container2 > div, .container3 > div{ width: 6px; height: 6px; background-color: #DB1236; border-radius: 100%; position: absolute; -webkit-animation: bouncedelay 1.2s infinite ease-in-out; animation: bouncedelay 1.2s infinite ease-in-out; -webkit-animation-fill-mode: both; animation-fill-mode: both;}
+.container1 > div, .container2 > div, .container3 > div{ width: 6px; height: 6px; background-color: #ff5f3a; border-radius: 100%; position: absolute; -webkit-animation: bouncedelay 1.2s infinite ease-in-out; animation: bouncedelay 1.2s infinite ease-in-out; -webkit-animation-fill-mode: both; animation-fill-mode: both;}
 .spinner .spinner-container{ position: absolute; width: 100%; height: 100%;}
 .container2{ -webkit-transform: rotateZ(45deg); transform: rotateZ(45deg);}
 .container3{ -webkit-transform: rotateZ(90deg); transform: rotateZ(90deg);}
